# uma-serve

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PRD.md  README.md  build.sh  first-phase-design.md  pytest.ini
docs/: BUILD.md  CONFIG.md  DIRECTIONS.md  EXPERIMENTS.md  FINDINGS.md  MEMORY.md  METRICS.md  OPTIMIZATIONS.md  POLICY.md  PRD_ADDENDUM.md  PROTOCOL.md  SCHEDULER.md  SYSTEM_DESIGN.md  TESTING.md
scripts/: run_dev.sh
scripts/tests/: run_m1.py  run_m3.py
src/: main.cpp
src/cli/: README.md  main.cpp
src/ipc/: README.md  poller.h  poller_kqueue.cpp  protocol.cpp  protocol.h  session.h  session_manager.cpp  session_manager.h  uds_server.cpp  uds_server.h
src/metrics/: README.md  metrics.cpp  metrics.h
src/runtime/: README.md  config.cpp  config.h  infer.cpp  infer.h  model.cpp  model.h  tokens.cpp  tokens.h
src/sched/: README.md  bmt.cpp  bmt.h  policy.cpp  policy.h  sampling.cpp  sampling.h  scheduler.cpp  scheduler.h
src/umad/: README.md  main.cpp
src/util/: README.md  logging.h  utf8.h
tests/cpp/: bmt_test.cpp  ipc_protocol_test.cpp  policy_test.cpp  sampling_test.cpp  test_main.cpp
tests/e2e/: conftest.py  test_m1_basics.py  test_m3_concurrent_json.py  test_m3_interleaving.py  test_m4_json_protocol.py  test_perf_smoke.py
